--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Slack</title>
   </head>
-  <body style="margin: 0px; padding: 0px">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <body class="full_height get_started">
+    <div id="root" class="full_height"></div>
   </body>
 </html>
